fix jumping for player

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,8 +7,8 @@ body {
 .layout-wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100%;
   background: url('/images/styles/main_bg.png');
+  min-height: 100vh;
 }
 
 .layout-body {
